# CurriculumBuilder

./: .env.example  .gitignore  README.md  pyproject.toml
src/curriculum_builder/: __init__.py  cli.py  constants.py  crew_app.py  main.py  paths.py  prompts.py  settings.py  slug_util.py  tools.py
